# singular-heaven

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
crates/ytmusic-api/: Cargo.toml
crates/ytmusic-api/examples/: search.rs
crates/ytmusic-api/src/: auth.rs  client.rs  constants.rs  continuations.rs  error.rs  lib.rs  nav.rs
crates/ytmusic-api/src/api/: account.rs  browsing.rs  explore.rs  library.rs  mod.rs  playlist.rs  search.rs  watch.rs
crates/ytmusic-api/src/parsers/: browsing.rs  explore.rs  library.rs  playlist.rs  search.rs  watch.rs
crates/ytmusic-api/src/types/: browsing.rs  common.rs  explore.rs  library.rs  mod.rs  playlist.rs  search.rs  streaming.rs  watch.rs
doc/: youtube-music-track-collections.md
docs/: CHANGELOG.md  CONTRIBUTING-DOCS.md  README.md  keep-alive-screens.md  known-bugs.md  session-handoff-2026-04-07.md  youtube-music-playback-architecture.md  youtube-music-track-likes.md  ytmusicapi-reference.md
docs/adr/: ADR-001-backend-first-queue.md  ADR-002-track-likes-backend-first.md  ADR-003-sidebar-uses-guide.md  ADR-004-playlist-management-backend-first.md  ADR-005-cookie-auth-multi-account.md
docs/explanation/: keep-alive-screens.md  memory-optimization.md  network-connection-pool.md  webview2-memory-level.md  youtube-music-auth.md  youtube-music-playback-architecture.md  youtube-music-playlist-management.md  youtube-music-radio-architecture.md  (+1 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  media.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  playback_queue.rs  playlist_cache.rs  thumb_cache.rs
src-tauri/src/youtube_music/: client.rs  commands.rs  lyrics_lrclib.rs  mod.rs  session.rs
(+133 files in other folders)
