[package]
name = "ytmusic-api"
version = "0.1.0"
edition = "2021"
description = "YouTube Music InnerTube API client — converted from Python ytmusicapi"
authors = ["Open Source Maintainer"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sha1 = "0.10"
hex = "0.4"
regex = "1"
